k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: employee-platform
  labels:
    app.kubernetes.io/part-of: employee-platform
    environment: production
